# CarbonLens

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.py
ai/rules/: diet_rules.yaml  energy_rules.yaml  travel_rules.yaml
app/: Home.py  utils_local_calc.py
app/assets/: styles.css
app/components/: charts.py  forms.py  scorecard.py  toasts.py
app/pages/: 1_Analyze_Footprint.py  2_AI_Recommendations.py  3_Simulation_Scenarios.py  4_Leaderboard_and_Badges.py  5_Data_Assumptions_&_sources.py
backend/: main.py  test.py
backend/api/: __init__.py  routes_footprint.py  routes_leaderboard.py  routes_reco.py  routes_users.py
backend/core/: config.py  schemas.py  security.py
backend/db/: models.py  session.py
backend/db/migrations/: alembic.ini  env.py
backend/db/migrations/versions/: 0001_init.py
backend/services/: benchmark.py  calculator.py  forecasting.py  recommender.py  scoring.py
backend/utils/: ef_loader.py  validators.py
config/: app.yaml  emission_factors.yaml  logging.conf
data/demo/: demo_user_profiles.json
infra/docker/: backend.Dockerfile  streamlit.Dockerfile
scripts/: export_report.py  init_db.py  seed_demo.py
tests/: test_api.py  test_calculator.py  test_green_score.py  test_recommender.py
